fix content card

--- a/my sites/style.css
+++ b/my sites/style.css
@@ -107,3 +107,8 @@ aside ul .list-menu{
 #side-menu::-webkit-scrollbar {
     width: 0px;
 }
+
+#content-card-container{
+    display: grid;
+    grid-template-columns: auto auto auto;
+}
